src/App.css
.App {
  text-align: center;
  display:flex;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
h1, h2, h3, h4, h5{
  margin: 5px;
}
body{
  background-color: #222
}
.my-draggable {
  cursor: point;
  max-width: 40vw;
  max-height: 80vh;
  background-color: #cba;
  padding: 15px;
  border: 1px black;
  display: flex;
  flex-direction:column;
  justify-content:flex-start;
  align-items:center;
  transition: 3s;
  border-radius: 0 0 10px 10px;
}

.hidden{
  display:none;
}

.hideButton{
  display:flex;
  justify-content:flex-start;
  border-radius: 10px 10px 0 0;
}

/*https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting*/
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}


.site-links{
  display:flex;
  justify-content:space-around;
}

.bookshelf{
  background-color:#AAA;
  display: flex;
  flex-direction: column;
  justify-content:space-between;
  align-items: center;
  min-width: 180px;
}

.floating{
  height: 55px;
  display:flex;
  justify-content:center;
  align-items:center;
}
.book{
  width:130px;
  border-radius:10px;
}

.mainScreen{
  color:#AAA;
}

.skill-legend{
  display:flex;
  justify-content: center;
}
.skill-legend > div{
  margin-left: 10px;
}


.skills{
  display:flex;
  justify-content: space-evenly;
  flex-wrap:wrap;
}
.skills > div{
  min-width: 15%;
  width: 15%;
  max-width: 15%;
  padding: 10px;
  display:flex;
  flex-direction:column;
  justify-content:flex-end;
}


.col-2{
  flex-grow:4;
}

.skill-subtext{
  align-self:center; 
}

.sort-buttons{
  cursor: pointer;
  display:flex;
  justify-content:center;
  align-items: center;
  padding: 10px;
  background-color:black;
  color: white;
}

.selected{
  background-color:darkgray;
}

.reversed{
  background-color:gray;
}
.project-skill-filter{
  display:flex;
  width: 100%;
  justify-content: center;
}

.resetbutton{
  background-color:gray;
  border:1px black;
  width: 33%;
  margin: 10px auto;
  cursor: pointer;
  padding: 5px;
}

.search-by-buttons{
  display: flex;
  width: 50%;
  margin: auto;
  justify-content: space-around;
}
.search-by-buttons > div{
  margin: 5px;
  background-color: gray;
  padding: 5px;
  cursor: pointer;
}

